can't select title so it's not annoying

--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -168,6 +168,10 @@
                 @apply font-bold;
             }
 
+            summary {
+                @apply select-none;
+            }
+
             .admonition-title {
                 @apply m-0 mb-2 border-b border-inherit;
             }
