--- a/khoBlog/templates/tailwind/post_aside.html
+++ b/khoBlog/templates/tailwind/post_aside.html
@@ -159,10 +159,10 @@
   {% if series %}
     <section>
       <h2 class="text-sm font-medium text-gray-500 dark:text-jumbo-100">Series</h2>
-      <dl class="mt-5 grid grid-cols-1 gap-5">
-        <div class="px-4 py-5 bg-white dark:bg-jumbo-700 shadow rounded-2xl overflow-hidden sm:p-6">
+      <dl class="aside-section">
+        <div class="px-4 py-5 bg-white dark:bg-jumbo-700 overflow-hidden sm:p-6">
           <dt class="text-sm font-medium text-gray-500 dark:text-jumbo-100 truncate">
-            <a class="text-base" href="{% url 'blog:post_series_list' slug=object.series.slug %}">{{ object.series.title }}</a>
+            <a class="underline hover:no-underline text-base" href="{% url 'blog:post_series_list' slug=object.series.slug %}">{{ object.series.title }}</a>
           </dt>
           <dd class="mt-1 text-3xl font-semibold text-jumbo-900 dark:text-jumbo-50">
             {% if series.description %}
@@ -174,10 +174,10 @@
           </dd>
         </div>
         {% for e in series.all %}
-          <div class="px-4 py-5 bg-white dark:bg-jumbo-700 shadow rounded-2xl overflow-hidden sm:p-6">
+          <div class="px-4 py-5 bg-white dark:bg-jumbo-700 overflow-hidden sm:p-6">
             <dt class="text-sm font-medium text-gray-500 dark:text-jumbo-100 truncate">
               {% if not e.is_scheduled or user.is_superuser %}
-                <a href="{% url 'blog:post_detail' slug=e.slug %}">Part #{{ forloop.counter }}:
+                <a class="underline hover:no-underline text-base" href="{% url 'blog:post_detail' slug=e.slug %}">Part #{{ forloop.counter }}:
                   {{ e }}
                   {% if e == object %}
                     <span class="italic text-sm">(You are here)</span>
@@ -213,10 +213,10 @@
     </section>
   {% endif %}
 
-  <div>
+  <section>
     <h2 class="text-sm font-medium text-gray-500 dark:text-jumbo-100">Stats</h2>
-    <dl class="mt-5 grid grid-cols-1 gap-5">
-      <div class="px-4 py-5 bg-white dark:bg-jumbo-700 shadow rounded-2xl overflow-hidden sm:p-6">
+    <dl class="aside-section">
+      <div class="px-4 py-5 bg-white dark:bg-jumbo-700 shadow rounded-t-2xl overflow-hidden sm:p-6">
         <dt class="text-sm font-medium text-gray-500 dark:text-jumbo-100 truncate">
           Seen
         </dt>
@@ -225,7 +225,7 @@
           time{{ object.clicks|pluralize:'s' }}
         </dd>
       </div>
-      <div class="px-4 py-5 bg-white dark:bg-jumbo-700 shadow rounded-2xl overflow-hidden sm:p-6">
+      <div class="px-4 py-5 bg-white dark:bg-jumbo-700 shadow rounded-b-2xl overflow-hidden sm:p-6">
         <dt class="text-sm font-medium text-gray-500 dark:text-jumbo-100 truncate">
           Randomly chosen
         </dt>
@@ -235,5 +235,5 @@
         </dd>
       </div>
     </dl>
-  </div>
+  </section>
 </article>
