color of aside section in light mode caption file fix

--- a/khoBlog/templates/tailwind/post_aside.html
+++ b/khoBlog/templates/tailwind/post_aside.html
@@ -160,7 +160,7 @@
     <section>
       <h2 class="text-sm font-medium text-gray-500 dark:text-jumbo-100">Series</h2>
       <dl class="aside-section">
-        <div class="px-4 py-5 bg-white dark:bg-jumbo-700 overflow-hidden sm:p-6">
+        <div class="px-4 py-5 bg-gray-50 dark:bg-jumbo-700 overflow-hidden sm:p-6">
           <dt class="text-sm font-medium text-gray-500 dark:text-jumbo-100 truncate">
             <a class="underline hover:no-underline text-base" href="{% url 'blog:post_series_list' slug=object.series.slug %}">{{ object.series.title }}</a>
           </dt>
@@ -174,7 +174,7 @@
           </dd>
         </div>
         {% for e in series.all %}
-          <div class="px-4 py-5 bg-white dark:bg-jumbo-700 overflow-hidden sm:p-6">
+          <div class="px-4 py-5 bg-gray-50 dark:bg-jumbo-700 overflow-hidden sm:p-6">
             <dt class="text-sm font-medium text-gray-500 dark:text-jumbo-100 truncate">
               {% if not e.is_scheduled or user.is_superuser %}
                 <a class="underline hover:no-underline text-base" href="{% url 'blog:post_detail' slug=e.slug %}">Part #{{ forloop.counter }}:
@@ -216,7 +216,7 @@
   <section>
     <h2 class="text-sm font-medium text-gray-500 dark:text-jumbo-100">Stats</h2>
     <dl class="aside-section">
-      <div class="px-4 py-5 bg-white dark:bg-jumbo-700 shadow rounded-t-2xl overflow-hidden sm:p-6">
+      <div class="px-4 py-5 bg-gray-50 dark:bg-jumbo-700 shadow rounded-t-2xl overflow-hidden sm:p-6">
         <dt class="text-sm font-medium text-gray-500 dark:text-jumbo-100 truncate">
           Seen
         </dt>
@@ -225,7 +225,7 @@
           time{{ object.clicks|pluralize:'s' }}
         </dd>
       </div>
-      <div class="px-4 py-5 bg-white dark:bg-jumbo-700 shadow rounded-b-2xl overflow-hidden sm:p-6">
+      <div class="px-4 py-5 bg-gray-50 dark:bg-jumbo-700 shadow rounded-b-2xl overflow-hidden sm:p-6">
         <dt class="text-sm font-medium text-gray-500 dark:text-jumbo-100 truncate">
           Randomly chosen
         </dt>
