Secondary color in light mode to be cornflower blue Fixes #141

--- a/khoBlog/templates/sub_base_main_block.html
+++ b/khoBlog/templates/sub_base_main_block.html
@@ -67,7 +67,7 @@
                   </span>
                 {% else %}
                   {% if i == page_obj.paginator.ELLIPSIS %}
-                    <span class="relative inline-flex items-center px-4 py-2 border border-gray-300 bg-white text-sm font-medium text-gray-700 dark:bg-jumbo-700 dark:border-jumbo-600 dark:text-jumbo-50">
+                    <span class="relative inline-flex items-center px-4 py-2 border border-gray-300 bg-gray-50 text-sm font-medium text-gray-700 dark:bg-jumbo-700 dark:border-jumbo-600 dark:text-jumbo-50">
                       {{ i }}
                     </span>
                   {% else %}
