--- a/portfolio/templates/portfolio/project_detail.html
+++ b/portfolio/templates/portfolio/project_detail.html
@@ -68,7 +68,7 @@
               <div class="w-full border-t border-gray-300 dark:border-jumbo-600"></div>
             </div>
             <div class="relative flex justify-center">
-              <span class="px-3 bg-white dark:bg-jumbo-900 text-lg font-medium text-gray-900 dark:text-jumbo-300">
+              <span class="px-3 bg-gray-50 dark:bg-jumbo-900 text-lg font-medium text-gray-900 dark:text-jumbo-300">
                 {{ project.get_sub_projects.count }}
                 Sub Project{{ project.get_sub_projects.count|pluralize:'s' }}
               </span>
