--- a/todo/templates/todo/list.html
+++ b/todo/templates/todo/list.html
@@ -33,7 +33,7 @@
                   {% endif %}
                 </tr>
               </thead>
-              <tbody class="bg-white divide-y divide-gray-200 dark:bg-jumbo-700 dark:divide-jumbo-300">
+              <tbody class="bg-gray-50 divide-y divide-gray-200 dark:bg-jumbo-700 dark:divide-jumbo-300">
                 {% for task in tasks %}
                   <tr>
                     <td class="py-4 pl-4 pr-3 text-sm font-medium text-gray-900 dark:text-jumbo-300 sm:pl-6">{{ task.pk }}</td>
