--- a/khoBlog/templates/account/profile.html
+++ b/khoBlog/templates/account/profile.html
@@ -126,7 +126,7 @@
           <div class="mt-8 max-w-5xl mx-auto px-4 pb-12 sm:px-6 lg:px-8">
             <h2 class="text-sm font-medium text-gray-500 dark:text-jumbo-300">Github account</h2>
             {% for github in accounts.github %}
-              <div class="relative rounded-2xl md:w-1/2 border border-gray-300 dark:border-jumbo-500 bg-white dark:bg-jumbo-700 px-6 py-5 shadow-sm flex items-center space-x-3 hover:border-gray-400 dark:hover:border-jumbo-600 focus-within:ring-2 focus-within:ring-offset-2 dark:focus-within:ring-offset-jumbo-900 focus-within:ring-cornflower-500 dark:focus-within:ring-cornflower-500">
+              <div class="relative rounded-2xl md:w-1/2 border border-gray-300 dark:border-jumbo-500 bg-gray-50 dark:bg-jumbo-700 px-6 py-5 shadow-sm flex items-center space-x-3 hover:border-gray-400 dark:hover:border-jumbo-600 focus-within:ring-2 focus-within:ring-offset-2 dark:focus-within:ring-offset-jumbo-900 focus-within:ring-cornflower-500 dark:focus-within:ring-cornflower-500">
                 <div class="flex-shrink-0">
                   <img class="h-10 w-10 rounded-full" src="{{ github.extra_data.avatar_url }}" loading="lazy" alt="User's Github account's profile picture">
                 </div>
