--- a/khoBlog/templates/tailwind/facts_flyout.html
+++ b/khoBlog/templates/tailwind/facts_flyout.html
@@ -8,7 +8,7 @@
     </svg>
   </button>
 
-  <div x-show="open" x-transition:enter="transition ease-out duration-200" x-transition:enter-start="opacity-0 -translate-y-1" x-transition:enter-end="opacity-100 translate-y-0" x-transition:leave="transition ease-in duration-150" x-transition:leave-start="opacity-100 translate-y-0" x-transition:leave-end="opacity-0 -translate-y-1" x-description="'Menu' flyout menu, show/hide based on flyout menu state." class="hidden md:block absolute z-10 top-full inset-x-0 shadow-lg bg-white dark:bg-jumbo-900" x-ref="panel" @click.away="open = false" style="display: none;">
+  <div x-show="open" x-transition:enter="transition ease-out duration-200" x-transition:enter-start="opacity-0 -translate-y-1" x-transition:enter-end="opacity-100 translate-y-0" x-transition:leave="transition ease-in duration-150" x-transition:leave-start="opacity-100 translate-y-0" x-transition:leave-end="opacity-0 -translate-y-1" x-description="'Menu' flyout menu, show/hide based on flyout menu state." class="hidden md:block absolute z-10 top-full inset-x-0 shadow-lg bg-gray-50 dark:bg-jumbo-900" x-ref="panel" @click.away="open = false" style="display: none;">
     <div class="max-w-7xl mx-auto grid gap-y-10 px-4 py-8 sm:grid-cols-2 sm:gap-x-8 sm:py-12 sm:px-6 lg:px-8 xl:pr-12">
       {% facts %}
 
@@ -18,9 +18,9 @@
         <article id="{{ o_fact.slug }}">
           {% if o_fact.link %}
             {% if o_fact.link.permalink %}
-              <a href="{{ o_fact.link.permalink }}" class="-m-3 p-3 flex flex-col justify-between rounded-2xl hover:bg-gray-50 dark:hover:bg-jumbo-700">
+              <a href="{{ o_fact.link.permalink }}" class="-m-3 p-3 flex flex-col justify-between rounded-2xl hover:bg-gray-200 dark:hover:bg-jumbo-700">
             {% else %}
-              <a href="{{ o_fact.link.content_object.get_absolute_url }}"{% if o_fact.link.content_type.model == 'url' %} target="_blank" rel="noopener noreferrer"{% endif %} class="-m-3 p-3 flex flex-col justify-between rounded-2xl hover:bg-gray-50 dark:hover:bg-jumbo-700">
+              <a href="{{ o_fact.link.content_object.get_absolute_url }}"{% if o_fact.link.content_type.model == 'url' %} target="_blank" rel="noopener noreferrer"{% endif %} class="-m-3 p-3 flex flex-col justify-between rounded-2xl hover:bg-gray-200 dark:hover:bg-jumbo-700">
             {% endif %}
           {% endif %}
             <div class="flex md:h-full lg:flex-col">
