--- a/khoBlog/templates/tailwind/post_aside.html
+++ b/khoBlog/templates/tailwind/post_aside.html
@@ -160,11 +160,11 @@
     <section>
       <h2 class="text-sm font-medium text-gray-500 dark:text-jumbo-100">Series</h2>
       <dl class="aside-section">
-        <div class="px-4 py-5 bg-gray-100/75 dark:bg-jumbo-700 overflow-hidden sm:p-6">
-          <dt class="text-sm font-medium text-gray-500 dark:text-jumbo-100 truncate">
+        <div class="px-4 py-5 bg-cornflower-100 dark:bg-jumbo-700 overflow-hidden sm:p-6">
+          <dt class="text-sm font-medium text-cornflower-500 dark:text-jumbo-100 truncate">
             <a class="underline hover:no-underline text-base" href="{% url 'blog:post_series_list' slug=object.series.slug %}">{{ object.series.title }}</a>
           </dt>
-          <dd class="mt-1 text-3xl font-semibold text-jumbo-900 dark:text-jumbo-50">
+          <dd class="mt-1 text-3xl font-semibold text-cornflower-800 dark:text-jumbo-50">
             {% if series.description %}
               {{ series.description }}
               -
@@ -174,8 +174,8 @@
           </dd>
         </div>
         {% for e in series.all %}
-          <div class="px-4 py-5 bg-gray-100/75 dark:bg-jumbo-700 overflow-hidden sm:p-6">
-            <dt class="text-sm font-medium text-gray-500 dark:text-jumbo-100 truncate">
+          <div class="px-4 py-5 bg-cornflower-100 dark:bg-jumbo-700 overflow-hidden sm:p-6">
+            <dt class="text-sm font-medium text-cornflower-500 dark:text-jumbo-100 truncate">
               {% if not e.is_scheduled or user.is_superuser %}
                 <a class="underline hover:no-underline text-base" href="{% url 'blog:post_detail' slug=e.slug %}">Part #{{ forloop.counter }}:
                   {{ e }}
@@ -204,7 +204,7 @@
                 </span>
               {% endif %}
             </dt>
-            <dd class="mt-1 font-semibold text-gray-900 dark:text-jumbo-50">
+            <dd class="mt-1 font-semibold text-cornflower-800 dark:text-jumbo-50">
               {{ e.description }}
             </dd>
           </div>
@@ -216,20 +216,20 @@
   <section>
     <h2 class="text-sm font-medium text-gray-500 dark:text-jumbo-100">Stats</h2>
     <dl class="aside-section">
-      <div class="px-4 py-5 bg-gray-100/75 dark:bg-jumbo-700 shadow rounded-t-2xl overflow-hidden sm:p-6">
-        <dt class="text-sm font-medium text-gray-500 dark:text-jumbo-100 truncate">
+      <div class="px-4 py-5 bg-cornflower-100 dark:bg-jumbo-700 shadow rounded-t-2xl overflow-hidden sm:p-6">
+        <dt class="text-sm font-medium text-cornflower-500 dark:text-jumbo-100 truncate">
           Seen
         </dt>
-        <dd class="mt-1 text-3xl font-semibold text-gray-900 dark:text-jumbo-50">
+        <dd class="mt-1 text-3xl font-semibold text-cornflower-800 dark:text-jumbo-50">
           {{ object.clicks }}
           time{{ object.clicks|pluralize:'s' }}
         </dd>
       </div>
-      <div class="px-4 py-5 bg-gray-100/75 dark:bg-jumbo-700 shadow rounded-b-2xl overflow-hidden sm:p-6">
-        <dt class="text-sm font-medium text-gray-500 dark:text-jumbo-100 truncate">
+      <div class="px-4 py-5 bg-cornflower-100 dark:bg-jumbo-700 shadow rounded-b-2xl overflow-hidden sm:p-6">
+        <dt class="text-sm font-medium text-cornflower-500 dark:text-jumbo-100 truncate">
           Randomly chosen
         </dt>
-        <dd class="mt-1 text-3xl font-semibold text-gray-900 dark:text-jumbo-50">
+        <dd class="mt-1 text-3xl font-semibold text-cornflower-800 dark:text-jumbo-50">
           {{ object.rnd_choice }}
           time{{ object.rnd_choice|pluralize:'s' }}
         </dd>
