--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,5 +1,11 @@
 {% extends 'sub_base_main_block.html' %}
-{% load comments comments_xtd super_buttons markdown_extra compress %}
+{% load static comments comments_xtd super_buttons markdown_extra compress %}
+
+{% block additional_css %}
+  {% compress css %}
+  <link rel="stylesheet" href="{% static 'khoBlog/css/highlight.css' %}" media="screen">
+  {% endcompress css %}
+{% endblock additional_css %}
 
 {% block content_main %}
   <div class="xl:grid xl:grid-cols-3">
