--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -62,7 +62,7 @@
     <meta property="og:site_name" content="Hello There!"/>
     <meta property="og:image" content="{% static 'khoBlog/img/RuthinkkTooBig.webp' %}">
     <meta property="twitter:image" content="{% static 'khoBlog/img/RuthinkkTooBig.webp' %}">
-    <link rel="apple-touch-icon" href={% static 'khoBlog/img/RuthinkkTooBig-small-square.png' %}"/>
+    <link rel="apple-touch-icon" href="{% static 'khoBlog/img/RuthinkkTooBig-small-square.png' %}"/>
 
     {% block page_head %}
       <!-- Primary Meta Tags -->
