--- a/khoBlog/templates/tailwind/super_buttons.html
+++ b/khoBlog/templates/tailwind/super_buttons.html
@@ -46,6 +46,19 @@
               {% endif %}
             </div>
           {% endif %}
+          {% if object.get_absolute_outdated_url %}
+            <div class="dropdown_item_container" role="none">
+              {% if not object.is_outdated %}
+                <a class="dropdown_item" href="{{ object.get_absolute_outdated_url }}">
+                  Mark as outdated
+                </a>
+              {% else %}
+                <button class="dropdown_item w-full text-left" disabled="disabled">
+                  Is outdated
+                </button>
+              {% endif %}
+            </div>
+          {% endif %}
           {% if object.get_absolute_clone_url %}
             <div class="dropdown_item_container" role="none">
               <a href="{{ object.get_absolute_clone_url }}" class="dropdown_item">Duplicate</a>
