--- a/khoBlog/templates/tailwind/status_dot.html
+++ b/khoBlog/templates/tailwind/status_dot.html
@@ -23,7 +23,7 @@
     <span class="h-1.5 w-1.5 rounded-full bg-red-500" aria-hidden="true"></span>
   </div>
 {% endif %}
-{% if object.is_outdated %}
+{% if object.is_content_outdated_date %}
   <div class="inline-flex">
     <span class="h-1.5 w-1.5 rounded-full bg-amber-800" aria-hidden="true"></span>
   </div>
