fixed superbutton dropdown background of disabled element would be round even if it wasn't the first child

--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -107,11 +107,11 @@
         .dropdown_item_container {
             @apply first:!pt-0 last:!pb-0;
 
-            &:first-of-type .dropdown_item:first-of-type {
+            &:first-of-type :first-child {
                 @apply rounded-t-xl;
             }
 
-            &:last-of-type .dropdown_item:last-of-type {
+            &:last-of-type :last-child {
                 @apply rounded-b-xl;
             }
         }
