--- a/khoBlog/templates/tailwind/super_buttons.html
+++ b/khoBlog/templates/tailwind/super_buttons.html
@@ -33,29 +33,29 @@
             {% endif %}
           {% endif %}
 
-          {% if object.get_absolute_needs_review_url %}
+          {% if object.get_absolute_needs_review_url or object.get_absolute_oudated_url %}
             <div class="dropdown_item_container" role="none">
-              {% if not object.needs_reviewing %}
-                <a class="dropdown_item" href="{{ object.get_absolute_needs_review_url }}">
-                  Mark as Needs Reviewing
-                </a>
-              {% else %}
-                <button class="dropdown_item w-full text-left" disabled="disabled">
-                  Needs Reviewing
-                </button>
+              {% if object.get_absolute_needs_review_url %}
+                {% if not object.needs_reviewing %}
+                  <a class="dropdown_item" href="{{ object.get_absolute_needs_review_url }}">
+                    Mark as Needs Reviewing
+                  </a>
+                {% else %}
+                  <button class="dropdown_item w-full text-left" disabled="disabled">
+                    Needs Reviewing
+                  </button>
+                {% endif %}
               {% endif %}
-            </div>
-          {% endif %}
-          {% if object.get_absolute_outdated_url %}
-            <div class="dropdown_item_container" role="none">
-              {% if not object.is_content_outdated_date %}
-                <a class="dropdown_item" href="{{ object.get_absolute_outdated_url }}">
-                  Mark as outdated
-                </a>
-              {% else %}
-                <button class="dropdown_item w-full text-left" disabled="disabled">
-                  Is outdated
-                </button>
+              {% if object.get_absolute_outdated_url %}
+                {% if not object.is_content_outdated_date %}
+                  <a class="dropdown_item" href="{{ object.get_absolute_outdated_url }}">
+                    Mark as outdated
+                  </a>
+                {% else %}
+                  <button class="dropdown_item w-full text-left" disabled="disabled">
+                    Is outdated
+                  </button>
+                {% endif %}
               {% endif %}
             </div>
           {% endif %}
