--- a/blog/templates/blog/post_confirm_outdated.html
+++ b/blog/templates/blog/post_confirm_outdated.html
@@ -2,13 +2,47 @@
 {% load widget_tweaks project_tags %}
 
 {% block content %}
-  <h3>Mark
-    {{ post.id }}
-    -
-    {{ post.title }} as outdated?</h3>
+  <div class="text-lg">Mark <span class="font-medium">{{ post.title }}</span> as outdated?</div>
   <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
-    {% form form %}
+
+    <section class="non-field-errors">
+      {{ form.non_field_errors }}
+    </section>
+
+    <section class="hidden-fields-errors">
+      {% for hidden_field in form.hidden_fields %}
+        {{ hidden_field.errors }}
+        {{ hidden_field }}
+      {% endfor %}
+    </section>
+
+    <section class="text-flamingo-600">
+      {{ form.non_field_errors }}
+    </section>
+
+    <section class="mb-2">
+      <div class="form-floating">
+        {{ form.is_content_outdated.label_tag }}
+        {{ form.is_content_outdated|add_class:"form-control" }}
+        {% if form.is_content_outdated.help_text %}
+          <div class="text-sm">{{ form.is_content_outdated.help_text }}</div>
+        {% endif %}
+      </div>
+    </section>
+
+    <section class="mb-2">
+      {{ form.is_content_outdated_date.label_tag }}
+      <div class="flex gap-2 w-full md:w-1/4">
+        {{ form.is_content_outdated_date|add_class:"form-control picker" }}
+      </div>
+      {% if form.is_content_outdated_date.help_text %}
+        <span class="text-sm">{{ form.is_content_outdated_date.help_text }}</span>
+      {% endif %}
+      {% for error in form.is_content_outdated_date.errors %}
+        <small class="text-flamingo-600">{{ error }}</small>
+      {% endfor %}
+    </section>
 
     <button type="submit" class="kho-button-forms kho-button-submit-delete mt-2">{{ title }}</button>
   </form>
