--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -310,6 +310,10 @@
 
     .dropdown_item {
         @apply dark:text-jumbo-50 dark:hover:bg-jumbo-800 hover:dropdown_item_active dark:disabled:bg-jumbo-900 disabled:dark:hover:text-jumbo-50 block px-4 py-2 text-sm text-gray-700 disabled:cursor-not-allowed disabled:bg-gray-400 disabled:hover:text-gray-700;
+
+        &.active {
+            @apply bg-cornflower-500 text-cornflower-100 hover:bg-cornflower-600 hover:text-cornflower-50;
+        }
     }
 
     .dropdown_item_container {
